# python-project-lvl2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: python-check.yaml
gendiff/: __init__.py  cli.py  formatter.py  gendiff.py  loader.py  parser.py
gendiff/formatter/: default.py  flat.py  jsonf.py  plain.py  tools.py
gendiff/scripts/: gendiff.py
tests/: test_comparison_files.py
tests/fixtures/: expected_comparison_flat_files_json.txt  expected_comparison_nested_files_json.txt  flat_format_comparison_result.py  flat_json_files_comparison_result.py  nested_file1.yml  plain_format_comparison_result.py  stylish_format_comparison_result.py
